--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -245,15 +245,17 @@
                             </span>
                         </li>
                     </ul>
-                    <div class="footer__arrow-top">
-                        <img src="/img/arrow-top.svg" alt="Вверх">
+                    <div class="footer__bottom footer__bottom_right">
+                        <div class="footer__arrow-top">
+                            <img src="/img/arrow-top.svg" alt="Вверх">
+                        </div>
+                        <a class="footer__feedback" href="">
+                            <img src="/img/message.svg" alt="Связаться">
+                        </a>
+                        <a class="footer__bottom _black">
+                            Карта сайта
+                        </a>
                     </div>
-                    <a class="footer__feedback" href="">
-                        <img src="/img/message.svg" alt="Связаться">
-                    </a>
-                    <a class="footer__bottom _black">
-                        Карта сайта
-                    </a>
                 </li>
             </ul>
         </div>
