--- a/app/source/scss/UI/_pagination.scss
+++ b/app/source/scss/UI/_pagination.scss
@@ -18,3 +18,15 @@
         }
     }
 }
+
+@media (max-width: 1024px) {
+    .pagination {
+        margin-top: 4rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .pagination {
+        margin-top: 3rem;
+    }
+}
