--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -27,3 +27,9 @@ html, body, .wrapper {
         font-size: 14px;
     }
 }
+
+@media (max-width: 1024px) {
+    html, body, .wrapper {
+        font-size: 16px;
+    }
+}
