--- a/app/source/scss/UI/_button-swithces.scss
+++ b/app/source/scss/UI/_button-swithces.scss
@@ -18,3 +18,19 @@
         height: 100%;
     }
 }
+
+@media (max-width: 1024px) {
+    .button-switches {
+        display: flex;
+        flex-wrap: wrap;
+        grid-gap: 1.25rem 2rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .button-switches {
+        display: flex;
+        flex-wrap: wrap;
+        grid-gap: 1rem;
+    }
+}
