--- a/app/source/scss/UI/_select.scss
+++ b/app/source/scss/UI/_select.scss
@@ -1,7 +1,11 @@
 ._select {
+    cursor: pointer;
+
     position: relative;
 
     &__checked {
+        background-color: var(--fifth-color);
+
         display: flex;
         align-items: center;
 
@@ -9,18 +13,33 @@
     }
 
     &__input {
+        cursor: pointer;
+
+        padding: 0 0.25rem;
+
         width: 100%;
     }
 
     &__list {
+        background: var(--fifth-color);
+
         display: none;
         flex-direction: column;
+        row-gap: 0.25rem;
 
         position: absolute;
-        
-        width: 100%;
+
+        opacity: 0;
 
         z-index: 100;
+    }
+
+    &__item {
+        cursor: pointer;
+
+        display: inline-block;
+
+        padding: 0 0.25rem;
     }
 
     &__arrow {
@@ -30,6 +49,7 @@
     &._active {
         ._select__list {
             display: flex;
+            opacity: 1;
         }
 
         ._select__arrow {
