--- a/app/source/scss/UI/_title.scss
+++ b/app/source/scss/UI/_title.scss
@@ -53,3 +53,25 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    .section__title {
+        font-size: 2.5rem;
+
+        &_line {
+            &::before {
+                width: 6.87rem;
+            }
+
+            &::after {
+                width: 10.625rem;
+            }
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .section__title {
+        font-size: 1.5rem;
+    }
+}
