--- a/app/source/scss/layout/_footer.scss
+++ b/app/source/scss/layout/_footer.scss
@@ -9,7 +9,7 @@
 
     &__list {
         display: flex;
-        grid-gap: 1rem 3.125rem;
+        grid-gap: 1.75rem 3.125rem;
         justify-content: space-between;
     }
 
@@ -89,6 +89,14 @@
 
         margin-top: 3.75rem;
 
+        &_right {
+            display: flex;
+            flex-direction: column;
+
+            margin-left: auto;
+            margin-top: 0;
+        }
+
         a {
             color: var(--third-color);
         }
@@ -162,5 +170,84 @@
 
         width: 5rem;
         height: 5rem;
+    }
+}
+
+@media (max-width: 1650px) {
+    .footer {
+        &__list {
+            column-gap: 1rem;
+        }
+
+        &__work-schedule {
+            &_item {
+                column-gap: 1rem;
+            }
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .footer {
+        &__list {
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+
+        &__item {
+            flex: 0 0 45%;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .footer {
+
+        &__item {
+            flex: 0 0 100%;
+        }
+
+        &__logo {
+            margin-top: 3.25rem;
+        }
+
+        &__buttons {
+            row-gap: 1rem;
+
+            margin-top: 3rem;
+        }
+
+        &__news_subscribe {
+            margin-top: 4rem;
+        }
+
+        &__arrow-top {
+            margin-left: 0;
+        }
+
+        &__feedback {
+            margin-left: 0;
+        }
+
+        &__bottom {
+            &_right {
+                align-items: center;
+                flex-wrap: wrap;
+                flex-direction: row;
+                justify-content: space-between;
+                grid-gap: 0.75rem;
+
+                margin-left: 0;
+                margin-top: 1.5rem;
+
+                & > * {
+                    margin: 0;
+                }
+            }
+
+            &._black {
+                flex: 1 0 100%;
+            }
+        }
     }
 }
