--- a/app/source/scss/sections/_about.scss
+++ b/app/source/scss/sections/_about.scss
@@ -5,16 +5,21 @@
 
     &__content {
         display: flex;
-        grid-gap: 6.25rem;
+        grid-gap: 1.25rem 6.25rem;
     }
 
     &__image {
+        position: relative;
+
         width: 25rem;
         height: 25rem;
 
         img {
             object-fit: cover;
             object-position: center;
+
+            left: 0;
+            top: 0;
 
             width: inherit;
             height: inherit;
@@ -27,5 +32,39 @@
         row-gap: 1.25rem;
 
         font-size: 1.25rem;
+    }
+}
+
+@media (max-width: 1024px) {
+    .about {
+        &__image {
+            margin: 0 auto;
+        }
+
+        &__content {
+            flex-direction: column;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .about {
+        &__title {
+            margin-bottom: 4rem;
+        }
+
+        &__image {
+            padding-top: 100%;
+
+            width: 100%;
+            height: 100%;
+
+            img {
+                position: absolute;
+
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
 }
