--- a/app/source/scss/sections/_comments.scss
+++ b/app/source/scss/sections/_comments.scss
@@ -20,3 +20,13 @@
         height: 2.5rem;
     }
 }
+
+@media (max-width: 768px) {
+    .comments {
+        padding: 2rem 0 3.125rem;
+
+        &__title {
+            margin-bottom: 3rem;
+        }
+    }
+}
