--- a/app/source/scss/sections/_consultation.scss
+++ b/app/source/scss/sections/_consultation.scss
@@ -25,7 +25,7 @@
             align-items: center;
             justify-content: flex-end;
             flex-grow: 1;
-            column-gap: 0.93rem;
+            grid-gap: 0.93rem;
         }
 
         &_bottom {
@@ -57,5 +57,27 @@
         width: 100%;
         max-width: 13.125rem;
         height: 2.5rem;
+    }
+}
+
+@media (max-width: 1024px) {
+    .consultation {
+        &__container {
+            flex-direction: column;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .consultation {
+        &__content {
+            &_top {
+                flex-direction: column;
+            }
+
+            &_line {
+                display: none;
+            }
+        }
     }
 }
