--- a/app/source/scss/sections/_employee.scss
+++ b/app/source/scss/sections/_employee.scss
@@ -29,7 +29,7 @@
     &__item {
         display: flex;
         align-items: center;
-        column-gap: 7.25rem;
+        grid-gap: 2rem 7.25rem;
 
         &_image {
             display: flex;
@@ -174,6 +174,46 @@
 
             width: 5.62rem;
             height: 1px;
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .employee {
+        padding: 6.25rem 0 6.75rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .employee {
+        &__title {
+            margin-bottom: 5rem;
+        }
+
+        &__list {
+            &_inner {
+                row-gap: 3rem;
+            }
+        }
+
+        &__item {
+            &_title {
+                font-size: 1.75rem;
+            }
+        }
+    }
+}
+
+@media (max-width: 680px) {
+    .employee {
+        &__item {
+            flex-direction: column;
+
+            &_image {
+                padding-top: 100%;
+
+                width: 100%;
+            }
         }
     }
 }
