--- a/app/source/scss/sections/_info.scss
+++ b/app/source/scss/sections/_info.scss
@@ -1,6 +1,7 @@
 .info {
     display: flex;
     align-items: flex-start;
+    grid-gap: 3.75rem;
 
     font-size: 1.25rem;
     line-height: 152%;
@@ -125,19 +126,19 @@
         display: flex;
         flex-direction: column;
         row-gap: 1.87rem;
-
-        padding: 0 3.75rem;
     }
 
     &__button {
         margin-top: 6.25rem;
         margin-left: auto;
 
-        width: 13.125rem;
+        width: 100%;
+        max-width: 13.125rem;
         height: 2.5rem;
 
         &._long {
-            width: 17.5rem;
+            width: 100%;
+            max-width: 17.5rem;
         }
     }
 
@@ -145,12 +146,33 @@
         display: flex;
         align-items: center;
         justify-content: flex-end;
-        column-gap: 3.125rem;
+        grid-gap: 1.25rem 3.125rem;
 
         margin-top: 3.125rem;
 
         .info__button {
             margin: 0;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .info {
+        flex-direction: column;
+
+        &__right {
+            flex-shrink: 1;
+
+            width: 100%;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .info {
+        &__buttons {
+            align-items: flex-start;
+            flex-direction: column;
         }
     }
 }
