--- a/app/source/scss/sections/_landscape-solutions.scss
+++ b/app/source/scss/sections/_landscape-solutions.scss
@@ -20,11 +20,11 @@
     }
 
     &__image {
-        display: flex;
+        box-shadow: var(--img-shadow);
 
-        img {
-            box-shadow: var(--img-shadow );
-        }
+        display: inline-flex;
+
+        overflow: hidden;
 
         &._1 {
             align-self: flex-end;
@@ -46,9 +46,8 @@
         }
 
         &._3 {
-            display: flex;
-
-            justify-content: flex-end;
+            display: inline-flex;
+            align-self: flex-end;
 
             margin-top: 0.75rem;
             margin-right: 1.25rem;
@@ -59,6 +58,8 @@
         }
 
         &._4 {
+            align-self: start;
+
             img {
                 width: 24.739vw;
             }
@@ -76,12 +77,19 @@
     }
 
     &__center {
+        display: flex;
+        flex-direction: column;
+
         margin-left: -5rem;
         margin-right: 1.25rem;
 
         max-width: 39.25rem;
 
         &-right {
+            display: flex;
+            flex-direction: column;
+            row-gap: 3.75rem;
+
             margin-top: 4.5rem;
         }
     }
@@ -89,9 +97,144 @@
     &__expense-account {
         text-transform: uppercase;
 
-        margin-top: 3.75rem;
-
-        width: 23.125rem;
+        width: 100%;
+        max-width: 23.125rem;
         height: 2.5rem;
+    }
+}
+
+@media (max-width: 1024px) {
+    .landscape-solutions {
+        flex-wrap: wrap;
+
+        &__center {
+            flex: 0 1 40%;
+            order: 2;
+
+            margin: 0;
+
+            width: 100%;
+
+            &-right {
+                flex: 1 1 30%;
+                flex-direction: column-reverse;
+                row-gap: 1.375rem;
+                order: 4;
+
+                margin-top: 0.93rem;
+                margin-left: 1.5rem;
+            }
+        }
+
+        &__image {
+            &._1 {
+                align-self: flex-start;
+                order: 1;
+
+                margin-top: 0;
+
+                img {
+                    width: 20.81vw;
+                }
+            }
+
+            &._2 {
+                align-self: flex-start;
+                flex: 0 1 17.5%;
+                order: 3;
+
+                margin-top: -5rem;
+
+                img {
+                    width: 16.97vw;
+                    width: 100%;
+                }
+            }
+
+            &._3 {
+                margin-right: 0;
+
+                img {
+                    width: 53.62vw;
+                }
+            }
+
+            &._4 {
+                margin-left: -5rem;
+                margin-right: 5rem;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            &._5 {
+                flex: 0 1 17.5%;
+                order: 5;
+
+                margin-left: auto;
+                margin-top: 2rem;
+
+                img {
+                    width: 16.97vw;
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 420px) {
+    .landscape-solutions {
+        &__center {
+            flex-grow: 1;
+            
+            width: 100%;
+
+            &-right {
+                flex-basis: auto;
+
+                margin-left: 0;
+
+                width: 100%;
+            }
+        }
+
+        &__image {
+            &._1,
+            &._2 {
+                display: none;
+            }
+
+            &._3 {
+                width: 85%;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            &._4 {
+                margin: 0;
+
+                width: 65%;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            &._5 {
+                margin-top: -11.25rem;
+
+                flex-basis: 20%;
+
+                width: 45%;
+
+                img {
+                    width: 100%;
+                }
+            }
+        }
     }
 }
