--- a/app/source/scss/sections/_popular.scss
+++ b/app/source/scss/sections/_popular.scss
@@ -1,6 +1,16 @@
 .popular {
     padding: 11.5rem 0 10.75rem;
 
+    &._catalog {
+        .popular__list {
+            overflow: auto;
+
+            &_inner {
+                flex-wrap: wrap;
+            }
+        }
+    }
+
     &__title {
         margin-bottom: 12.5rem;
     }
@@ -26,9 +36,13 @@
 
     &__products {
         display: flex;
-        align-items: center;
         justify-content: space-between;
         column-gap: 3.125vw;
+    }
+
+    &__arrow {
+        display: flex;
+        align-items: center;
     }
 
     &__list {
@@ -67,15 +81,17 @@
         }
 
         &_image {
+            box-shadow: var(--img-shadow);
+
             display: flex;
 
             position: relative;
 
+            overflow: hidden;
+
             padding-top: 125.57%;
 
             img {
-                box-shadow: var(--img-shadow);
-
                 object-fit: cover;
                 object-position: center;
 
@@ -100,6 +116,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            column-gap: 1rem;
         }
 
         &_raiting {
@@ -130,7 +147,8 @@
         }
 
         &_card-add {
-            width: 13.125rem;
+            width: 100%;
+            max-width: 13.125rem;
             height: 2.5rem;
         }
     }
@@ -161,8 +179,47 @@
 
 @media (max-width: 1024px) {
     .popular {
+        padding: 5.75rem 0 5.25rem;
+
+        &__title {
+            margin-bottom: 6rem;
+        }
+
+        &__sort {
+            flex-wrap: wrap;
+
+            padding: 0;
+        }
+
         &__item {
             flex-basis: 50%;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .popular {
+        &__item {
+            flex-basis: 100%;
+
+            width: 100%;
+        }
+    }
+}
+
+
+@media (max-width: 576px) {
+    .popular {
+        &__arrow {
+            svg {
+                width: 2rem;
+            }
+        }
+
+        &__item {
+            flex-basis: 100%;
+
+            width: 100%;
         }
     }
 }
