--- a/app/source/scss/sections/_portfolio.scss
+++ b/app/source/scss/sections/_portfolio.scss
@@ -9,6 +9,7 @@
         display: flex;
         justify-content: flex-end;
         grid-gap: 2.5rem;
+        flex-wrap: wrap;
 
         margin-bottom: 6.25rem;
     }
@@ -62,7 +63,7 @@
         &_image {
             display: flex;
             flex-grow: 1;
-            
+
             height: 100%;
 
             img {
@@ -83,6 +84,51 @@
                 &::after {
                     background-color: var(--first-color);
                 }
+            }
+        }
+    }
+}
+
+
+@media (max-width: 1024px) {
+    .portfolio {
+        &__links {
+            grid-gap: 2.5rem;
+
+            margin-bottom: 4rem;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .portfolio {
+        padding-top: 5.125rem;
+
+        &__title {
+            margin-bottom: 2rem;
+        }
+
+        &__links {
+            grid-gap: 1rem;
+
+            margin-bottom: 2rem;
+        }
+
+        &__project {
+            &_title {
+                left: 3.65%;
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .portfolio {
+        &__project {
+            height: 75vw;
+
+            &_title {
+                font-size: 2rem;
             }
         }
     }
