--- a/app/source/scss/sections/_product-shop.scss
+++ b/app/source/scss/sections/_product-shop.scss
@@ -11,6 +11,7 @@
         display: flex;
         align-items: center;
         justify-content: flex-end;
+        flex-wrap: wrap;
         grid-gap: 2rem 3.125rem;
 
         margin-bottom: 3.125rem;
@@ -24,6 +25,7 @@
 
     &__short-info {
         display: flex;
+        flex-wrap: wrap;
         grid-gap: 3.125rem;
 
         margin-bottom: 10rem;
@@ -75,6 +77,7 @@
 
         &_params {
             display: flex;
+            flex-wrap: wrap;
             grid-gap: 2.5rem;
         }
 
@@ -156,7 +159,7 @@
     &__image_list {
         display: flex;
         flex-direction: column;
-        row-gap: 1rem;
+        grid-gap: 1rem;
 
         overflow-y: auto;
 
@@ -187,10 +190,13 @@
         max-width: 40rem;
 
         img {
+            object-fit: cover;
+            object-position: center;
+
             position: absolute;
             left: 0;
             top: 0;
-            
+
             width: 100%;
             height: 100%;
         }
@@ -261,6 +267,7 @@
 
         &_switches {
             display: flex;
+            flex-wrap: wrap;
             grid-gap: 1.5rem 2.5rem;
 
             margin-bottom: 3.75rem;
@@ -314,6 +321,57 @@
             border-bottom: none;
 
             padding-bottom: 0;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .product-shop {
+        &__short-info {
+            margin-bottom: 5rem;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .product-shop {
+        &__images {
+            grid-gap: 1rem;
+            flex-basis: 100%;
+
+            height: 20rem;
+        }
+
+        &__image_list {
+            flex: 0 0 50%;
+            flex-direction: row;
+            flex-wrap: wrap;
+
+            max-height: 20rem;
+        }
+
+        &__main-image {
+            padding-top: 0;
+
+            height: 100%;
+        }
+
+        &__short-info {
+            &_text {
+                flex-grow: 1;
+
+                max-width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .product-shop {
+        &__images {
+            flex-direction: column;
+
+            height: 175vw;
         }
     }
 }
