--- a/app/source/scss/sections/_stages-work.scss
+++ b/app/source/scss/sections/_stages-work.scss
@@ -19,6 +19,8 @@
 
         text-align: center;
 
+        margin: 0 auto;
+
         max-width: 16.375rem;
 
         &::before {
@@ -33,6 +35,20 @@
             &::before {
                 content: "0" counter(num);
             }
+        }
+
+        &:nth-child(2) {
+            grid-column: 2;
+            grid-row: 2;
+        }
+
+        &:nth-child(3) {
+            grid-column: 2/5;
+        }
+
+        &:nth-child(4) {
+            grid-column: 4;
+            grid-row: 2;
         }
 
         &_line {
@@ -62,7 +78,28 @@
     &__order {
         margin: 9.375rem auto 0;
 
-        width: 19.375rem;
+        width: 100%;
+        max-width: 19.375rem;
         height: 3.75rem;
+    }
+}
+
+@media (max-width: 1024px) {
+    .stages-work {
+        &__title {
+            margin-bottom: 4rem;
+        }
+
+        &__list {
+            grid-template-columns: 1fr;
+            grid-gap: 3.125rem;
+        }
+
+        &__item {
+            &:nth-child(n) {
+                grid-area: auto;
+                grid-column: auto;
+            }
+        }
     }
 }
