--- a/app/source/scss/sections/_awards.scss
+++ b/app/source/scss/sections/_awards.scss
@@ -254,7 +254,7 @@
                 padding: 33vw;
                 margin: 0 auto;
 
-                width: 33vw;
+                width: 100%;
 
                 img {
                     width: 100%;
