--- a/app/source/scss/sections/_landscape-solutions.scss
+++ b/app/source/scss/sections/_landscape-solutions.scss
@@ -15,7 +15,8 @@
     &__request {
         text-transform: uppercase;
 
-        width: 13.125rem;
+        max-width: 13.125rem;
+        width: 100%;
         height: 2.5rem;
     }
 
@@ -25,6 +26,11 @@
         display: inline-flex;
 
         overflow: hidden;
+
+        img {
+            object-fit: cover;
+            object-position: center;
+        }
 
         &._1 {
             align-self: flex-end;
@@ -184,7 +190,136 @@
     }
 }
 
+@media (max-width: 576px) {
+    .landscape-solutions {
+        .button {
+            text-transform: none;
+        }
+
+        &__image {
+            &._1 {
+                align-self: flex-start;
+                order: 1;
+
+                margin-top: 0;
+
+                img {
+                    width: 20.81vw;
+                }
+            }
+
+            &._2 {
+                align-self: flex-start;
+                flex: 0 1 17.5%;
+                order: 3;
+
+                margin-top: -5rem;
+
+                img {
+                    width: 16.97vw;
+                    width: 100%;
+                }
+            }
+
+            &._3 {
+                margin-right: 0;
+
+                img {
+                    width: 53.62vw;
+                }
+            }
+
+            &._4 {
+                margin-left: -5rem;
+                margin-right: 5rem;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            &._5 {
+                flex: 0 1 17.5%;
+                order: 5;
+
+                margin-left: auto;
+                margin-top: 2rem;
+
+                img {
+                    width: 16.97vw;
+                    width: 100%;
+                }
+            }
+        }
+
+        &__expense-account {
+            width: 128.5%;
+        }
+    }
+}
+
 @media (max-width: 420px) {
+    .landscape-solutions {
+        &__center {
+            padding-left: 1.25rem;
+
+            width: 90%;
+
+            &-right {
+                flex-basis: auto;
+
+                margin-left: 0;
+            }
+        }
+
+        &__image {
+            &._1 {
+                flex-basis: 2vw;
+                flex-grow: 1;
+
+                margin-right: 0;
+            }
+
+            &._2 {
+                flex-basis: 21%;
+
+                margin-right: auto;
+            }
+
+            &._3 {
+                width: 85%;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            &._4 {
+                margin: 0;
+
+                width: 65%;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            &._5 {
+                margin-top: -11.25rem;
+
+                flex-basis: 20%;
+
+                width: 45%;
+
+                img {
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 360px) {
     .landscape-solutions {
         &__center {
             flex-grow: 1;
