--- a/app/source/scss/sections/_reviews.scss
+++ b/app/source/scss/sections/_reviews.scss
@@ -37,15 +37,22 @@
         }
     }
 
-    &__counter {
+    &__bottom {
         color: var(--third-color);
 
         display: flex;
+        align-items: center;
         justify-content: center;
+        column-gap: 1.25rem;
 
         font-size: 1.5rem;
         
-        margin: 5rem auto 0;
+        margin-top: 5rem;
+    }
+
+    &__counter {
+        display: flex;
+        align-items: center;
     }
 }
 
