--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -123,8 +123,8 @@
                                             </li>
                                         </ul>
                                         <div class="header__city _select">
-                                            <div class="_select__checked">
-                                                <input class="_select__input" type="text" value="Москва" readonly>
+                                            <div class="_select__switch">
+                                                <div class="_select__checked">Москва</div>
                                                 <svg class="_select__arrow" width="0.5rem" height="0.25rem"
                                                     viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M4 4L8 0L0 -3.49691e-07L4 4Z" fill="#343434" />
