--- a/app/source/scss/UI/_select.scss
+++ b/app/source/scss/UI/_select.scss
@@ -3,7 +3,7 @@
 
     position: relative;
 
-    &__checked {
+    &__switch {
         background-color: var(--fifth-color);
 
         display: flex;
@@ -12,12 +12,14 @@
         height: 100%;
     }
 
-    &__input {
+    &__checked {
         cursor: pointer;
+
+        display: inline-block;
 
         padding: 0 0.25rem;
 
-        width: 100%;
+        //width: 100%;
     }
 
     &__list {
