--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -262,6 +262,7 @@
     </div>
 </footer>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script src="/js/all.js" defer></script>
 </body>
 
