--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
     <title>@@title</title>
 </head>
 
@@ -19,7 +20,7 @@
                             <a class="header__logo" href="/">
                                 <img src="/img/logo.svg" alt="Ландшафтный дом">
                             </a>
-    
+
                             <div class="header__burger-menu">
                                 <span class="header__burger-menu_line"></span>
                             </div>
