--- a/app/source/scss/layout/_header.scss
+++ b/app/source/scss/layout/_header.scss
@@ -1,5 +1,11 @@
 .header {
+    background-color: var(--fifth-color);
+
+    position: sticky;
+
     font-size: 1.125rem;
+
+    z-index: 1000;
 
     &__container {
         &_mobile {
@@ -210,6 +216,11 @@
 
 @media (max-width: 1024px) {
     .header {
+        position: fixed;
+        top: 0;
+
+        width: 100%;
+
         &__container {
             &_mobile {
                 display: block;
@@ -244,8 +255,6 @@
 
         &__logo {
             opacity: 0;
-
-            margin-bottom: 2rem;
         }
 
         &__left {
