--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -32,4 +32,8 @@ html, body, .wrapper {
     html, body, .wrapper {
         font-size: 16px;
     }
+
+    .main {
+        padding-top: 93px;
+    }
 }
