--- a/app/source/scss/sections/_landscape-solutions.scss
+++ b/app/source/scss/sections/_landscape-solutions.scss
@@ -13,6 +13,8 @@
     }
 
     &__request {
+        font-weight: 400;
+
         text-transform: uppercase;
 
         max-width: 13.125rem;
@@ -112,6 +114,10 @@
 @media (max-width: 1024px) {
     .landscape-solutions {
         flex-wrap: wrap;
+
+        &__request {
+            text-transform: none;
+        }
 
         &__center {
             flex: 0 1 40%;
@@ -270,6 +276,10 @@
 
                 margin-left: 0;
             }
+        }
+
+        &__expense-account {
+            width: 100%;
         }
 
         &__image {
