--- a/app/source/scss/sections/_product-shop.scss
+++ b/app/source/scss/sections/_product-shop.scss
@@ -243,6 +243,8 @@
                 align-items: center;
                 justify-content: center;
 
+                font-weight: 400;
+
                 width: 100%;
                 height: 2.5rem;
             }
@@ -321,6 +323,46 @@
             border-bottom: none;
 
             padding-bottom: 0;
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .product-shop {
+        &__table {
+            &_inner {
+                width: 100%;
+                min-width: auto;
+            }
+
+            &_title {
+                display: none;
+            }
+
+            &_info {
+                display: flex;
+                justify-content: space-between;
+                
+                margin-bottom: 1rem;
+
+                width: 100% !important;
+
+                &::before {
+                    content: attr(data-title);
+                }
+
+                &:nth-last-child(2) {
+                    margin-bottom: 0;
+                }
+
+                &:last-child {
+                    display: none;
+                }
+            }
+
+            &_image {
+                max-width: 5rem;
+            }
         }
     }
 }
