--- a/app/source/scss/sections/_landscape-solutions.scss
+++ b/app/source/scss/sections/_landscape-solutions.scss
@@ -1,6 +1,9 @@
 .landscape-solutions {
-    display: flex;
-    justify-content: center;
+
+    &__desktop {
+        display: flex;
+        justify-content: center;
+    }
 
     &__title_line {
         &::before {
@@ -109,71 +112,82 @@
         max-width: 23.125rem;
         height: 2.5rem;
     }
+
+    &__mobile {
+        display: none;
+        flex-direction: column;
+    }
+
+    &__top {
+        display: flex;
+
+        &_left {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            row-gap: 3rem;
+
+            flex: 0 0 25%;
+        }
+    }
+
+    &__bottom {
+        display: flex;
+        column-gap: 5.25rem;
+        justify-content: flex-end;
+
+        margin-top: 1.25rem;
+    }
 }
 
 @media (max-width: 1024px) {
     .landscape-solutions {
-        flex-wrap: wrap;
-
-        &__request {
-            text-transform: none;
+        &__desktop {
+            display: none;
         }
 
+        &__mobile {
+            display: flex;
+        }
+        
         &__center {
-            flex: 0 1 40%;
-            order: 2;
+            margin-left: 0;
+            margin-right: 0;
 
-            margin: 0;
-
-            width: 100%;
-
-            &-right {
-                flex: 1 1 30%;
-                flex-direction: column-reverse;
-                row-gap: 1.375rem;
-                order: 4;
-
-                margin-top: 0.93rem;
-                margin-left: 1.5rem;
-            }
+            max-width: 100%;
         }
 
         &__image {
             &._1 {
-                align-self: flex-start;
-                order: 1;
-
                 margin-top: 0;
+                margin-right: 1.25rem;
 
                 img {
-                    width: 20.81vw;
+                    width: 100%;
                 }
             }
 
             &._2 {
-                align-self: flex-start;
-                flex: 0 1 17.5%;
-                order: 3;
-
-                margin-top: -5rem;
+                margin-left: 1.75rem;
+                margin-bottom: 2.25rem;
 
                 img {
-                    width: 16.97vw;
                     width: 100%;
                 }
             }
 
             &._3 {
-                margin-right: 0;
+                margin: 0.93rem 0 1.75rem 3rem;
+
+                width: 90%;
 
                 img {
-                    width: 53.62vw;
+                    width: 100%;
                 }
             }
 
             &._4 {
-                margin-left: -5rem;
-                margin-right: 5rem;
+                width: 56%;
 
                 img {
                     width: 100%;
@@ -181,17 +195,23 @@
             }
 
             &._5 {
-                flex: 0 1 17.5%;
-                order: 5;
+                flex: 0 0 18%;
 
-                margin-left: auto;
-                margin-top: 2rem;
+                margin: 0;
+                margin-top: 2.25rem;
 
                 img {
-                    width: 16.97vw;
                     width: 100%;
                 }
             }
+        }
+
+        &__request {
+            text-transform: none;
+        }
+
+        &__expense-account {
+            margin-left: auto;
         }
     }
 }
@@ -202,184 +222,77 @@
             text-transform: none;
         }
 
+        &__expense-account {
+            width: calc(100% - 1.87rem);
+        }
+
         &__image {
-            &._1 {
-                align-self: flex-start;
-                order: 1;
-
-                margin-top: 0;
-
-                img {
-                    width: 20.81vw;
-                }
-            }
-
-            &._2 {
-                align-self: flex-start;
-                flex: 0 1 17.5%;
-                order: 3;
-
-                margin-top: -5rem;
-
-                img {
-                    width: 16.97vw;
-                    width: 100%;
-                }
-            }
-
             &._3 {
-                margin-right: 0;
-
-                img {
-                    width: 53.62vw;
-                }
+                width: auto;
             }
 
             &._4 {
-                margin-left: -5rem;
-                margin-right: 5rem;
-
-                img {
-                    width: 100%;
-                }
+                width: 46%;
             }
 
             &._5 {
-                flex: 0 1 17.5%;
-                order: 5;
+                flex: 0 0 18%;
 
-                margin-left: auto;
-                margin-top: 2rem;
-
-                img {
-                    width: 16.97vw;
-                    width: 100%;
-                }
-            }
-        }
-
-        &__expense-account {
-            width: 128.5%;
-        }
-    }
-}
-
-@media (max-width: 420px) {
-    .landscape-solutions {
-        &__center {
-            padding-left: 1.25rem;
-
-            width: 90%;
-
-            &-right {
-                flex-basis: auto;
-
-                margin-left: 0;
-            }
-        }
-
-        &__expense-account {
-            width: 100%;
-        }
-
-        &__image {
-            &._1 {
-                flex-basis: 2vw;
-                flex-grow: 1;
-
-                margin-right: 0;
-            }
-
-            &._2 {
-                flex-basis: 21%;
-
-                margin-right: auto;
-            }
-
-            &._3 {
-                width: 85%;
-
-                img {
-                    width: 100%;
-                }
-            }
-
-            &._4 {
                 margin: 0;
-
-                width: 65%;
-
-                img {
-                    width: 100%;
-                }
-            }
-
-            &._5 {
-                margin-top: -11.25rem;
-
-                flex-basis: 20%;
-
-                width: 45%;
-
-                img {
-                    width: 100%;
-                }
+                margin-top: 2.25rem;
             }
         }
     }
 }
 
-@media (max-width: 360px) {
+@media (max-width: 400px) {
     .landscape-solutions {
-        &__center {
-            flex-grow: 1;
-            
+        &__top {
+            &_left {
+                flex-basis: 22%;
+            }
+        }
+    }
+}
+
+@media (max-width: 380px) {
+    .landscape-solutions {
+        &__top {
+            &_left {
+                flex-basis: 20%;
+            }
+        }
+    }
+}
+
+@media (max-width: 370px) {
+    .landscape-solutions {
+        &__expense-account {
             width: 100%;
+        }
 
-            &-right {
-                flex-basis: auto;
-
+        &__image {
+            &._3 {
                 margin-left: 0;
+            }
 
+            &._4 {
                 width: 100%;
             }
-        }
-
-        &__image {
-            &._1,
-            &._2 {
-                display: none;
-            }
-
-            &._3 {
-                width: 85%;
-
-                img {
-                    width: 100%;
-                }
-            }
-
-            &._4 {
-                margin: 0;
-
-                width: 65%;
-
-                img {
-                    width: 100%;
-                }
-            }
 
             &._5 {
-                margin-top: -11.25rem;
-
-                flex-basis: 20%;
-
-                width: 45%;
-
-                img {
-                    width: 100%;
-                }
+                flex-basis: 30%;
             }
+        }
+
+        &__top {
+            &_left {
+                display: none;
+            }
+        }
+
+        &__bottom {
+            column-gap: 2rem;
         }
     }
 }
