--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <link rel="shortcut icon" href="/img/logo.svg" type="image/x-icon">
     <title>@@title</title>
 </head>
 
