--- a/app/source/scss/UI/_select.scss
+++ b/app/source/scss/UI/_select.scss
@@ -18,8 +18,6 @@
         display: inline-block;
 
         padding: 0 0.25rem;
-
-        //width: 100%;
     }
 
     &__list {
@@ -42,6 +40,13 @@
         display: inline-block;
 
         padding: 0 0.25rem;
+
+        transition: 200ms;
+
+        &:hover {
+            background-color: var(--second-color);
+            color: var(--fifth-color);
+        }
     }
 
     &__arrow {
